<resources>
    <string name="app_name">CalculadoraCredito</string>
    <string name="titulo_calculadora">Calculadora de Crédito</string>
    <string name="lbl_credito">Valor del crédito:</string>
    <string name="hint_credito">0.00</string>
    <string name="lbl_cuotas">Número de cuotas:</string>
    <string name="hint_cuotas">Ej: 12</string>
    <string name="lbl_interes">Interés mensual (%):</string>
    <string name="hint_interes">Ej: 2</string>
    <string name="boton_calcular">Calcular</string>
    <string name="formato_cuota">Valor por cuota: %1$.2f</string>
    <string name="formato_total">Valor total del crédito: %1$.2f</string>
    <string name="formato_ganancia">Ganancia total: %1$.2f</string>
</resources>