<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".actividad_principal">

    <TextView
        android:id="@+id/etiTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:text="@string/titulo_calculadora"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <TextView
        android:id="@+id/lblCredito"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/etiTitulo"
        android:layout_alignParentStart="true"
        android:layout_marginStart="32dp"
        android:layout_marginTop="40dp"
        android:text="@string/lbl_credito"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <EditText
        android:id="@+id/campoCredito"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:layout_alignBaseline="@id/lblCredito"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="32dp"
        android:layout_toEndOf="@id/lblCredito"
        android:importantForAutofill="no"
        android:hint="@string/hint_credito"
        android:inputType="numberDecimal" />

    <TextView
        android:id="@+id/lblCuotas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/campoCredito"
        android:layout_alignParentStart="true"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/lbl_cuotas"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <EditText
        android:id="@+id/campoCuotas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:layout_alignBaseline="@id/lblCuotas"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="32dp"
        android:layout_toEndOf="@id/lblCuotas"
        android:importantForAutofill="no"
        android:hint="@string/hint_cuotas"
        android:inputType="number" />

    <TextView
        android:id="@+id/lblInteres"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/campoCuotas"
        android:layout_alignParentStart="true"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/lbl_interes"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <EditText
        android:id="@+id/campoInteres"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:layout_alignBaseline="@id/lblInteres"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="32dp"
        android:layout_toEndOf="@id/lblInteres"
        android:importantForAutofill="no"
        android:hint="@string/hint_interes"
        android:inputType="numberDecimal" />

    <Button
        android:id="@+id/botonCalcular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/lblInteres"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:text="@string/boton_calcular" />

    <TextView
        android:id="@+id/etiCuota"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/botonCalcular"
        android:layout_marginTop="24dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <TextView
        android:id="@+id/etiTotal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etiCuota"
        android:layout_marginTop="8dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <TextView
        android:id="@+id/etiGanancia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etiTotal"
        android:layout_marginTop="8dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

</RelativeLayout>
